tests/parser/fail/unterminatedStruct.h
struct S {
  int i;
  int j;
  int k;
  int l;
  struct T {
    int i;
};
